{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 109,
  "lineage": "fda22fe7-393f-f8c3-1f00-41a2f979c4db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ea95a0823907afe",
            "arn": "arn:aws:ec2:us-east-1:686255979099:elastic-ip/eipalloc-01ea95a0823907afe",
            "association_id": "eipassoc-070cbea9333fad1a0",
            "domain": "vpc",
            "id": "eipalloc-01ea95a0823907afe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-073a88f5ba270e211",
            "private_dns": "ip-10-10-1-21.ec2.internal",
            "private_ip": "10.10.1.21",
            "public_dns": "ec2-3-220-180-119.compute-1.amazonaws.com",
            "public_ip": "3.220.180.119",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "aws_nat_gateway_eip"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "aws_nat_gateway_eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "eipalloc-01ea95a0823907afe",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:686255979099:instance/i-09226cc596f324831",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09226cc596f324831",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acme-commerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04894e9ef41838273"
              }
            ],
            "primary_network_interface_id": "eni-04894e9ef41838273",
            "private_dns": "ip-10-10-20-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.20.128",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb9b5ebf6a1e5725",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06623d9870f726b69",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "web-ec2-1"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "web-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3ecbbf87ae6b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "i-09226cc596f324831",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:686255979099:instance/i-0dd52175c21dd9a22",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd52175c21dd9a22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acme-commerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05c8f9aa09c8ec1a8"
              }
            ],
            "primary_network_interface_id": "eni-05c8f9aa09c8ec1a8",
            "private_dns": "ip-10-10-30-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.30.216",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ed6b5b8233e9261",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010b9682565cc34a9",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "web-ec2-2"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "web-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024ed3ecbbf87ae6b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "i-0dd52175c21dd9a22",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:internet-gateway/igw-0640c984b1d93fc70",
            "id": "igw-0640c984b1d93fc70",
            "owner_id": "686255979099",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Acme Commerce Pvt. Ltd.-igw"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Acme Commerce Pvt. Ltd.-igw"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "igw-0640c984b1d93fc70",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:loadbalancer/net/acme-commerce-nlb/29af961e1b04b608",
            "arn_suffix": "net/acme-commerce-nlb/29af961e1b04b608",
            "dns_name": "acme-commerce-nlb-29af961e1b04b608.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:686255979099:loadbalancer/net/acme-commerce-nlb/29af961e1b04b608",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "acme-commerce-nlb",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "security_groups": [
              "sg-0c40823c4121db655"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00448f15bdfcc75cc"
              },
              {
                "subnet_id": "subnet-022eaacfd42ccb987"
              }
            ],
            "subnets": [
              "subnet-00448f15bdfcc75cc",
              "subnet-022eaacfd42ccb987"
            ],
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "acme-commerce-lb"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "acme-commerce-lb"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:loadbalancer/net/acme-commerce-nlb/29af961e1b04b608"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:listener/net/acme-commerce-nlb/29af961e1b04b608/716a16e2e0750273",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:686255979099:listener/net/acme-commerce-nlb/29af961e1b04b608/716a16e2e0750273",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:loadbalancer/net/acme-commerce-nlb/29af961e1b04b608",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:listener/net/acme-commerce-nlb/29af961e1b04b608/716a16e2e0750273"
          },
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.aws_lb",
            "aws_security_group.lb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
            "arn_suffix": "targetgroup/acme-commerce-tg/a17a314799853503",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:686255979099:loadbalancer/net/acme-commerce-nlb/29af961e1b04b608"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "acme-commerce-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-ec2-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503,i-09226cc596f324831,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
            "target_id": "i-09226cc596f324831"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
            "target_id": "i-09226cc596f324831"
          },
          "dependencies": [
            "aws_instance.web-1-ec2",
            "aws_lb_target_group.aws_lb",
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503,i-0dd52175c21dd9a22,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
            "target_id": "i-0dd52175c21dd9a22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686255979099:targetgroup/acme-commerce-tg/a17a314799853503",
            "target_id": "i-0dd52175c21dd9a22"
          },
          "dependencies": [
            "aws_instance.web-1-ec2",
            "aws_lb_target_group.aws_lb",
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ea95a0823907afe",
            "association_id": "eipassoc-070cbea9333fad1a0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-045ff6e1859a3be0e",
            "network_interface_id": "eni-073a88f5ba270e211",
            "private_ip": "10.10.1.21",
            "public_ip": "3.220.180.119",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00448f15bdfcc75cc",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "aws_nat_gw"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "aws_nat_gw"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "nat-045ff6e1859a3be0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:route-table/rtb-0c76154360548b609",
            "id": "rtb-0c76154360548b609",
            "owner_id": "686255979099",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045ff6e1859a3be0e",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "private_route_table"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "rtb-0c76154360548b609",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:route-table/rtb-0a1c88f13043c0995",
            "id": "rtb-0a1c88f13043c0995",
            "owner_id": "686255979099",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0640c984b1d93fc70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "public_route_table"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "rtb-0a1c88f13043c0995",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034ae49a71c1540b7",
            "region": "us-east-1",
            "route_table_id": "rtb-0c76154360548b609",
            "subnet_id": "subnet-06623d9870f726b69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "rtbassoc-034ae49a71c1540b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f58234b7e8bdfe74",
            "region": "us-east-1",
            "route_table_id": "rtb-0c76154360548b609",
            "subnet_id": "subnet-010b9682565cc34a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "rtbassoc-0f58234b7e8bdfe74",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5067108456753e3",
            "region": "us-east-1",
            "route_table_id": "rtb-0a1c88f13043c0995",
            "subnet_id": "subnet-00448f15bdfcc75cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "rtbassoc-0a5067108456753e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04744ed9e803d8239",
            "region": "us-east-1",
            "route_table_id": "rtb-0a1c88f13043c0995",
            "subnet_id": "subnet-022eaacfd42ccb987"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "rtbassoc-04744ed9e803d8239",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:security-group/sg-0c40823c4121db655",
            "description": "Security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c40823c4121db655",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acme-commerce-lb-sg",
            "name_prefix": "",
            "owner_id": "686255979099",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "sg-0c40823c4121db655",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:security-group/sg-024ed3ecbbf87ae6b",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024ed3ecbbf87ae6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c40823c4121db655"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acme-commerce-web-sg",
            "name_prefix": "",
            "owner_id": "686255979099",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "sg-024ed3ecbbf87ae6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-06623d9870f726b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06623d9870f726b69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Private_subnet-1"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Private_subnet-1"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "subnet-06623d9870f726b69",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-010b9682565cc34a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010b9682565cc34a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Private_subnet-2"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Private_subnet-2"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "subnet-010b9682565cc34a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-00448f15bdfcc75cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00448f15bdfcc75cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "subnet-00448f15bdfcc75cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-022eaacfd42ccb987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022eaacfd42ccb987",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "public_subnet-2"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "public_subnet-2"
            },
            "vpc_id": "vpc-09c6bbd1f1d49fe74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "subnet-022eaacfd42ccb987",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:vpc/vpc-09c6bbd1f1d49fe74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ac375e82b3fc4dd0",
            "default_route_table_id": "rtb-0db442e7761c9dd7b",
            "default_security_group_id": "sg-0d7b64b137627280c",
            "dhcp_options_id": "dopt-0cf65eb5f324a88ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c6bbd1f1d49fe74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db442e7761c9dd7b",
            "owner_id": "686255979099",
            "region": "us-east-1",
            "tags": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Acme Commerce Pvt. Ltd.-vpc"
            },
            "tags_all": {
              "Application": "acme-commerce-web",
              "Company": "Acme Commerce Pvt. Ltd.",
              "Environment": "prod",
              "Name": "Acme Commerce Pvt. Ltd.-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255979099",
            "id": "vpc-09c6bbd1f1d49fe74",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}